[tool.poetry]
name = "comfyui-jh-misc-nodes"
version = "0.0.0"
description = "Miscellaneous custom nodes for ComfyUI"
authors = ["Jeffery Harrell <jefferyharrell@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-mock = "3.14.0"
numpy = "<2.0.0"
pillow = "^11.0.0"
torch = "^2.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry-auto-export.exports]]
output = "requirements.txt"
without_hashes = true
without = ["dev"]

[[tool.poetry-auto-export.exports]]
output = "requirements-dev.txt"
without_hashes = true
only = ["dev"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "A", "ANN", "RUF"]
fixable = ["ALL"]

[tool.ruff.format]
docstring-code-format = true
